// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SoundPad renders basic Sound Pad layout 1`] = `
<body>
  <div>
    <div>
      Sound Pad Online
      <div>
        PadEditorMockComponent
      </div>
    </div>
  </div>
</body>
`;

exports[`SoundPad renders items from GunJS 1`] = `
<body>
  <div>
    <div>
      Sound Pad Online
      <div>
        PadEditorMockComponent
      </div>
      <div>
        PadItemMockComponent
      </div>
      <div>
        PadItemMockComponent
      </div>
    </div>
  </div>
</body>
`;
